--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "manage",
+  "name": "monitor_manage_vue",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "jinjiuxiang <foreverklmn@sina.com>",
